--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,7 +10,7 @@ $mobSvgImgSize : 383px 329px;
 $mobSlideTxtFz27 : 27px;
 $mobSlideTxtFz14 : 14px;
 $mobContTxtFz15 : 15px;
-$mobTxtSvgImg :url(https://static-clova.pstatic.net/static/69898d9/m/img/sprite/sp_main.png);
+$mobTxtSvgImg :url(../img/sp_main.png);
 $mobTxtSvgImgSize : 294px 180px;
 
 
