--- a/scss/contents/_cont4.scss
+++ b/scss/contents/_cont4.scss
@@ -67,7 +67,7 @@
     .item1 {
       .item-link {
         .item-img-bg {
-          background: url(https://ssl.pstatic.net/static/clova/service/clova_ai/image/main/news/220418_smart_dictionary_pc.png) no-repeat 0 0;
+          background: url(../img/220418_smart_dictionary_pc.png) no-repeat 0 0;
           background-size: cover;
         }
       }
