--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@
 
 #wrap #header .container .header .mob-menu .nav-header .mob-menu-cl-box .mob-menu-cl-btn { display: block; width: 100%; height: 100%; }
 
-#wrap #header .container .header .mob-menu .nav-header .mob-menu-cl-box .mob-menu-cl-btn::before { content: ''; display: block; width: 100%; height: 100%; background: url(https://static-clova.pstatic.net/static/69898d9/m/img/sprite/sp_clova.png); background-size: 781px 756px; background-position: -191px 128px; }
+#wrap #header .container .header .mob-menu .nav-header .mob-menu-cl-box .mob-menu-cl-btn::before { content: ''; display: block; width: 100%; height: 100%; background: url(../../img/sp_clova.png); background-size: 781px 756px; background-position: -191px 128px; }
 
 #wrap #header .container .header .mob-menu .mob-menu-list { width: 100%; height: calc(100% - 54px); padding: 0 20px; overflow-y: scroll; }
 
@@ -124,25 +124,25 @@
 
 #wrap #banner .container .slide-view .slide-wrap .slide .bg-img { position: absolute; left: 0; top: 0; width: 100%; height: 100%; -webkit-filter: brightness(0.8); filter: brightness(0.8); }
 
-#wrap #banner .container .slide-view .slide-wrap .slide .bg-img.bg-img1 { background: url(../img/main_lamp.png) no-repeat 50% 90%; background-size: cover; }
+#wrap #banner .container .slide-view .slide-wrap .slide .bg-img.bg-img1 { background: url(../../img/main_lamp.png) no-repeat 50% 90%; background-size: cover; }
 
-#wrap #banner .container .slide-view .slide-wrap .slide .bg-img.bg-img2 { background: url(https://static-clova.pstatic.net/static/57794fa/img/main/main_clock_plus.png) no-repeat 50% 90%; background-size: cover; }
+#wrap #banner .container .slide-view .slide-wrap .slide .bg-img.bg-img2 { background: url(../../img/main_clock_plus.png) no-repeat 50% 90%; background-size: cover; }
 
 #wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img { display: none; position: absolute; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; -webkit-filter: brightness(0.8); filter: brightness(0.8); }
 
-#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-1 { background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/bg_engineering_blog.png) no-repeat center center; background-size: cover; }
+#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-1 { background: url(../img/bg_engineering_blog.png) no-repeat center center; background-size: cover; }
 
-#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-2 { background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_flick_lamp.png) no-repeat center center; background-size: cover; }
+#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-2 { background: url(../img/main_flick_lamp.png) no-repeat center center; background-size: cover; }
 
-#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-3 { background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_ainow.png) no-repeat center center; background-size: cover; }
+#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-3 { background: url(../img/main_ainow.png) no-repeat center center; background-size: cover; }
 
-#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-4 { background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_flick_clock_plus.png) no-repeat center center; background-size: cover; }
+#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-4 { background: url(../img/main_flick_clock_plus.png) no-repeat center center; background-size: cover; }
 
-#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-5 { background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_flick_ocr.png) no-repeat center center; background-size: cover; }
+#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-5 { background: url(../img/main_flick_ocr.png) no-repeat center center; background-size: cover; }
 
-#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-6 { background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_flick_ccai.png) no-repeat center center; background-size: cover; }
+#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-6 { background: url(../img/main_flick_ccai.png) no-repeat center center; background-size: cover; }
 
-#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-7 { background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_flick_voice.png) no-repeat center center; background-size: cover; }
+#wrap #banner .container .slide-view .slide-wrap .slide .mob-bg-img-7 { background: url(../img/main_flick_voice.png) no-repeat center center; background-size: cover; }
 
 #wrap #banner .container .slide-view .slide-wrap .slide .slide-desc { position: relative; z-index: 2; margin: auto; text-align: center; opacity: 0; -webkit-transform: translateY(100px); transform: translateY(100px); -webkit-transition: opacity 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out; transition: opacity 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out; transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out; transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out; }
 
@@ -344,7 +344,7 @@
 
 #wrap #contents #cont3 .container .item-list.web .item1 { background: -webkit-gradient(linear, left top, right top, from(#20aff1), to(#18be8a)); background: linear-gradient(0.25turn, #20aff1, #18be8a); }
 
-#wrap #contents #cont3 .container .item-list.web .item1::before { content: ''; position: relative; z-index: 1; display: block; width: 100%; height: 100%; background: url(https://static-clova.pstatic.net/static/1f2c7ac/img/main/banner_blog_pattern.png) no-repeat center center; background-size: cover; }
+#wrap #contents #cont3 .container .item-list.web .item1::before { content: ''; position: relative; z-index: 1; display: block; width: 100%; height: 100%; background: url(../img/bg_banner_blog.png) no-repeat center center; background-size: cover; }
 
 #wrap #contents #cont3 .container .item-list.web .item1 .item-inner { left: 37%; top: 22%; }
 
@@ -354,7 +354,7 @@
 
 #wrap #contents #cont3 .container .item-list.web .item2 { background: #191919; }
 
-#wrap #contents #cont3 .container .item-list.web .item2::before { content: ''; position: relative; z-index: 1; display: block; width: 100%; height: 100%; background: url(https://static-clova.pstatic.net/static/69898d9/img/main/banner_ceb_pattern.png) no-repeat center center; background-size: cover; }
+#wrap #contents #cont3 .container .item-list.web .item2::before { content: ''; position: relative; z-index: 1; display: block; width: 100%; height: 100%; background: url(../img/bg_banner_ceb.png) no-repeat center center; background-size: cover; }
 
 #wrap #contents #cont3 .container .item-list.web .item2 .item-inner { left: 10%; top: 22%; }
 
@@ -431,7 +431,7 @@
 
 #wrap #contents #cont4 .item-list .item:hover { -webkit-transform: scale(1.01); transform: scale(1.01); -webkit-box-shadow: 0 10px 20px 1px rgba(0, 0, 0, 0.2); box-shadow: 0 10px 20px 1px rgba(0, 0, 0, 0.2); }
 
-#wrap #contents #cont4 .item-list .item1 .item-link .item-img-bg { background: url(https://ssl.pstatic.net/static/clova/service/clova_ai/image/main/news/220418_smart_dictionary_pc.png) no-repeat 0 0; background-size: cover; }
+#wrap #contents #cont4 .item-list .item1 .item-link .item-img-bg { background: url(../img/220418_smart_dictionary_pc.png) no-repeat 0 0; background-size: cover; }
 
 #wrap #contents #cont4 .item-list .item2 .item-link .item-img-bg { background: url(../img/20220315_clova_studio_closed_beta_pc.png) no-repeat 0 0; background-size: cover; }
 
