--- a/scss/contents/_banner.scss
+++ b/scss/contents/_banner.scss
@@ -39,11 +39,11 @@
             height: 100%;
             filter: brightness(0.8);
             &.bg-img1 {
-              background: url(../img/main_lamp.png) no-repeat 50% 90%;
+              background: url(../../img/main_lamp.png) no-repeat 50% 90%;
               background-size: cover;
             }
             &.bg-img2 {
-              background: url(https://static-clova.pstatic.net/static/57794fa/img/main/main_clock_plus.png) no-repeat 50% 90%;
+              background: url(../../img/main_clock_plus.png) no-repeat 50% 90%;
               background-size: cover;
             }
           }
@@ -57,31 +57,31 @@
             height: 100%;
             filter: brightness(.8);
             &-1{
-              background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/bg_engineering_blog.png) no-repeat center center;
+              background: url(../img/bg_engineering_blog.png) no-repeat center center;
               background-size: cover;
             }
             &-2{
-              background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_flick_lamp.png) no-repeat center center;
+              background: url(../img/main_flick_lamp.png) no-repeat center center;
               background-size: cover;
             }
             &-3{
-              background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_ainow.png) no-repeat center center;
+              background: url(../img/main_ainow.png) no-repeat center center;
               background-size: cover;
             }
             &-4{
-              background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_flick_clock_plus.png) no-repeat center center;
+              background: url(../img/main_flick_clock_plus.png) no-repeat center center;
               background-size: cover;
             }
             &-5{
-              background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_flick_ocr.png) no-repeat center center;
+              background: url(../img/main_flick_ocr.png) no-repeat center center;
               background-size: cover;
             }
             &-6{
-              background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_flick_ccai.png) no-repeat center center;
+              background: url(../img/main_flick_ccai.png) no-repeat center center;
               background-size: cover;
             }
             &-7{
-              background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/main_flick_voice.png) no-repeat center center;
+              background: url(../img/main_flick_voice.png) no-repeat center center;
               background-size: cover;
             }
           }
