--- a/scss/contents/_cont3.scss
+++ b/scss/contents/_cont3.scss
@@ -60,7 +60,7 @@
           display: block;
           width: 100%;
           height: 100%;
-          background: url(https://static-clova.pstatic.net/static/1f2c7ac/img/main/banner_blog_pattern.png) no-repeat center center;
+          background: url(../img/bg_banner_blog.png) no-repeat center center;
           background-size: cover;
         }
         .item-inner {
@@ -87,7 +87,7 @@
           display: block;
           width: 100%;
           height: 100%;
-          background: url(https://static-clova.pstatic.net/static/69898d9/img/main/banner_ceb_pattern.png) no-repeat center center;
+          background: url(../img/bg_banner_ceb.png) no-repeat center center;
           background-size: cover;
         }
         .item-inner {
