--- a/scss/contents/_header.scss
+++ b/scss/contents/_header.scss
@@ -227,7 +227,7 @@
                 display: block;
                 width: 100%;
                 height: 100%;
-                background: url(https://static-clova.pstatic.net/static/69898d9/m/img/sprite/sp_clova.png);
+                background: url(../../img/sp_clova.png);
                 background-size: 781px 756px;
                 background-position: -191px 128px;
               }
