--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,9 +3,9 @@ $headerMobHeight:54px;
 $gnbColor1: rgba(255,255,255,.6);
 $gnbColor2: rgba(255,255,255,.8);
 $mainColor: #05d685;
-$svgImg : url(https://static-clova.pstatic.net/static/57794fa/img/sprite/sp_svg_icon.svg);
+$svgImg : url(../img/sp_svg_icon_web.png);
 $svgImgSize : 418px 372px;
-$mobSvgImg : url(https://static-clova.pstatic.net/static/69898d9/m/img/sprite/sp_svg_icon.svg);
+$mobSvgImg : url(../img/sp_svg_icon_mob.png);
 $mobSvgImgSize : 383px 329px;
 $mobSlideTxtFz27 : 27px;
 $mobSlideTxtFz14 : 14px;
