--- a/scss/contents/_cont3.scss
+++ b/scss/contents/_cont3.scss
@@ -11,6 +11,14 @@
         height: 100%;
         overflow: hidden;
         position: relative;
+        &::before{
+          content: '';
+          position: relative;
+          z-index: 1;
+          display: block;
+          width: 100%;
+          height: 100%;
+        }
         .item-inner {
           position: absolute;
           z-index: 2;
@@ -54,14 +62,8 @@
       .item1 {
         background: linear-gradient(0.25turn, #20aff1, #18be8a);
         &::before {
-          content: '';
-          position: relative;
-          z-index: 1;
-          display: block;
-          width: 100%;
-          height: 100%;
-          background: url(../img/bg_banner_blog.png) no-repeat center center;
-          background-size: cover;
+          background: url(../img/banner_blog_pattern_web.png) no-repeat center 0;
+          background-size: auto 100% ;
         }
         .item-inner {
           left: 37%;
@@ -69,11 +71,7 @@
           .item-title {
             width: 328px;
             &:before {
-              content: '';
-              display: block;
-              width: 100%;
-              background-position: -4px -47px;
-              background-size: 126% auto;
+              background-position: 0px -58px;
             }
           }
         }
@@ -81,13 +79,7 @@
       .item2 {
         background: #191919;
         &::before {
-          content: '';
-          position: relative;
-          z-index: 1;
-          display: block;
-          width: 100%;
-          height: 100%;
-          background: url(../img/bg_banner_ceb.png) no-repeat center center;
+          background: url(../img/banner_ceb_pattern_web.png) no-repeat center center;
           background-size: cover;
         }
         .item-inner {
@@ -96,11 +88,7 @@
           .item-title {
             width: 410px;
             &:before {
-              content: '';
-              display: block;
-              width: 100%;
-              background-position: -4px -3px;
-              background-size: 100% auto;
+              background-position: -2px -12px;
             }
           }
         }
@@ -139,25 +127,25 @@
               width: 7px;
               height: 12px;
               margin-left: 8px;
-              margin-top: -3px;
-              @include mob-svgImg-size-pos(76, 118);
+              margin-top: -1px;
+              @include mob-svgImg-size-pos(72, 118);
             }
           }
         }
       }
       .item1{
-        background: url(https://static-clova.pstatic.net/static/69898d9/m/img/main/bg_banner_blog.png) no-repeat 50% 0%;
+        background: url(../img/bg_banner_blog.png) no-repeat 50% 0%;
         background-size: cover;
         .item-title{
           width: 241px;
           height: 27px;
           &::before{
-            background-position: -4px -78px;
+            background-position: -4px -80px;
           }
         }
       }
       .item2{
-        background: #191919 url(https://static-clova.pstatic.net/static/69898d9/m/img/main/bg_banner_ceb.png) no-repeat 100% 0%;
+        background: #191919 url(../img/bg_banner_ceb.png) no-repeat 100% 0%;
         background-size: contain;
         .item-title{
           width: 295px;
