--- a/scss/contents/_footer.scss
+++ b/scss/contents/_footer.scss
@@ -25,7 +25,7 @@
             display: block;
             width: 100%;
             height: 100%;
-            @include svgImg-size-pos(-4, -90);
+            @include svgImg-size-pos(0, -97);
           }
         }
       }
@@ -54,40 +54,40 @@
         .item1 {
           a {
             &::before {
-              background-position: 34px -182px;
+              background-position: 59px -189px;
             }
             &:hover::before {
-              background-position: 72px -230px;
+              background-position: 70.8px -231px;
             }
           }
         }
         .item2 {
           a {
             &::before {
-              background-position: 66px -182px;
+              background-position: 90px -188px;
             }
             &:hover::before {
-              background-position: 232px -230px;
+              background-position: 241.7px -231.7px;
             }
           }
         }
         .item3 {
           a {
             &::before {
-              background-position: 136px -230px;
+              background-position: 142px -229px;
             }
             &:hover::before {
-              background-position: 104px -230px;
+              background-position: 108px -229px;
             }
           }
         }
         .item4 {
           a {
             &::before {
-              background-position: 40px -230px;
+              background-position: 40px -229px;
             }
             &:hover::before {
-              background-position: 168px -230px;
+              background-position: 177px -229px;
             }
           }
         }
@@ -124,6 +124,9 @@
         }
         &-txt {
           letter-spacing: -0.2px;
+          .mob-powered{
+            display: none;
+          }
         }
         &-naver {
           width: 50px;
@@ -131,14 +134,14 @@
           @include svgImg-size;
           margin-top: 2px;
           margin-left: 3px;
-          background-position: 78px -49px;
+          background-position: 82px -70px;
         }
         &-line {
           width: 33px;
           height: 18px;
           @include svgImg-size;
           margin-top: 2px;
-          background-position: 44px -92px;
+          background-position: 52px -112.4px;
         }
         i {
           display: inline-block;
