--- a/scss/contents/_banner.scss
+++ b/scss/contents/_banner.scss
@@ -39,11 +39,11 @@
             height: 100%;
             filter: brightness(0.8);
             &.bg-img1 {
-              background: url(../../img/main_lamp.png) no-repeat 50% 90%;
+              background: url(../img/main_lamp.png) no-repeat 50% 90%;
               background-size: cover;
             }
             &.bg-img2 {
-              background: url(../../img/main_clock_plus.png) no-repeat 50% 90%;
+              background: url(../img/main_clock_plus.png) no-repeat 50% 90%;
               background-size: cover;
             }
           }
