--- a/scss/contents/_header.scss
+++ b/scss/contents/_header.scss
@@ -227,7 +227,7 @@
                 display: block;
                 width: 100%;
                 height: 100%;
-                background: url(../../img/sp_clova.png);
+                background: url(../img/sp_clova.png);
                 background-size: 795px 754px;
                 background-position: -195px 127px;
               }
